--- a/FrontEnd/LelkiBekeFrontEnd/assets/css/main.css
+++ b/FrontEnd/LelkiBekeFrontEnd/assets/css/main.css
@@ -45,12 +45,12 @@
     cursor: pointer;
     overflow: hidden;
     transition: background-color 0.3s ease;
-    box-shadow: 9px 9px 12px #b2b2b3, -9px -9px 12px #ffffff;
+    box-shadow: 9px 9px 12px #b2b2b3;
 }
 
 .glow-button:hover {
     background-color: #cfa12d;
-    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3), 9px 9px 12px #b2b2b3, -9px -9px 12px #ffffff;
+    /* box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3), 9px 9px 12px #b2b2b3, -9px -9px 12px #ffffff; */
 }
 
 .glow-button .text {
@@ -62,14 +62,18 @@ button:disabled {
     background: #cccccc;
 }
 
-input:focus {
+input:focus, textarea:focus {
     outline: none;
     box-shadow: 0 0 4px 1px #ffbd00;
 }
 
 
-input {
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3), 6px 6px 8px #b2b2b3, -9px -9px 12px #ffffff;
+input, textarea {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3), 6px 6px 8px #b2b2b3;
+}
+
+textarea {
+    resize: none;
 }
 
 input:first-child {
@@ -100,3 +104,21 @@ body .auth-container {
     letter-spacing: 3px;
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
+
+.footer{
+    padding: 20px;
+}
+
+p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: #444;
+    padding: 20px;
+    margin: 5px auto;
+    max-width: 600px;
+}
+
+.profile-card{
+    margin-top: 20px;
+}
+
